force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/cdcpc__UnitOfMeasureConversion__c.object-meta.xml
<CustomObject>
    <label>Unit Of Measure Conversion</label>
    <nameField>
        <displayFormat>UOM_{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Of Measure Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>