force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__Density_UOM_To__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Density_UOM_To__c</fullName>
    <label>Density UOM To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Density_Units</valueSetName>
    </valueSet>
</CustomField>