force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__DensityActualTo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DensityActualTo__c</fullName>
    <label>Density Actual To</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>