force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__DensityStandardTo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DensityStandardTo__c</fullName>
    <label>Density Standard To</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>