force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__Exponent__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Exponent__c</fullName>
    <label>Exponent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>