force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__Flag__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Flag__c</fullName>
    <label>Flag</label>
    <length>22</length>
    <type>Text</type>
</CustomField>