force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__GasFlowRate_UOM_To__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GasFlowRate_UOM_To__c</fullName>
    <label>GasFlowRate_UOM_To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Flow_Rate_Units</valueSetName>
    </valueSet>
</CustomField>