force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__GasFlowRateTo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GasFlowRateTo__c</fullName>
    <label>Gas Flow Rate To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Flow_Rate_Units</valueSetName>
    </valueSet>
</CustomField>