force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__Multiplier__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>