force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__PressureTo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PressureTo__c</fullName>
    <label>Pressure To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Pressure_Units</valueSetName>
    </valueSet>
</CustomField>