force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__PToPsia__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PToPsia__c</fullName>
    <label>P To Psia</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>