force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__Temperature_UOM_From__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Temperature_UOM_From__c</fullName>
    <label>Temperature UOM From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Temperature_Units</valueSetName>
    </valueSet>
</CustomField>