force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__TemperatureTo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TemperatureTo__c</fullName>
    <label>Temperature To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Temperature_Units</valueSetName>
    </valueSet>
</CustomField>