force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/fields/cdcpc__TFromR__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TFromR__c</fullName>
    <label>T From R</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>