force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__Area.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Area</fullName>
    <active>true</active>
    <label>Area</label>
</RecordType>