force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__DensitySpecificVolume.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__DensitySpecificVolume</fullName>
    <active>true</active>
    <label>Density - Specific Volume</label>
</RecordType>