force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__Distance.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Distance</fullName>
    <active>true</active>
    <label>Distance</label>
</RecordType>