force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__GasFlowRate.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__GasFlowRate</fullName>
    <active>true</active>
    <label>Gas Flow Rate</label>
</RecordType>