force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__LiquidFlowRate.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__LiquidFlowRate</fullName>
    <active>true</active>
    <label>Liquid Flow Rate</label>
</RecordType>