force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__Pressure.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Pressure</fullName>
    <active>true</active>
    <label>Pressure</label>
</RecordType>