force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__Temperature.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Temperature</fullName>
    <active>true</active>
    <label>Temperature</label>
</RecordType>