force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__Viscosity.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Viscosity</fullName>
    <active>true</active>
    <label>Viscosity</label>
</RecordType>