force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/recordTypes/cdcpc__Volume.recordType-meta.xml
<RecordType>
    <fullName>cdcpc__Volume</fullName>
    <active>true</active>
    <label>Volume</label>
</RecordType>