force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__Pressure_UOM_From__c</columns>
    <columns>cdcpc__Pressure_UOM_To__c</columns>
    <columns>cdcpc__Adder__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <columns>cdcpc__Divider__c</columns>
    <columns>cdcpc__Exponent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Unit of Measure Conversions</label>
</ListView>