force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__DensitySpecificVolume.listView-meta.xml
<ListView>
    <fullName>cdcpc__DensitySpecificVolume</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__Density_UOM_From__c</columns>
    <columns>cdcpc__Density_UOM_To__c</columns>
    <columns>cdcpc__Exponent__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cdcpc__UnitOfMeasureConversion__c.cdcpc__DensitySpecificVolume</value>
    </filters>
    <label>All Density - Specific Volume</label>
</ListView>