force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__Distance.listView-meta.xml
<ListView>
    <fullName>cdcpc__Distance</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__Distance_UOM_From__c</columns>
    <columns>cdcpc__Distance_UOM_To__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <columns>cdcpc__Divider__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cdcpc__UnitOfMeasureConversion__c.cdcpc__Distance</value>
    </filters>
    <label>All Distance Conversions</label>
</ListView>