force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__GasFlowRate.listView-meta.xml
<ListView>
    <fullName>cdcpc__GasFlowRate</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__GasFlowRate_UOM_From__c</columns>
    <columns>cdcpc__GasFlowRate_UOM_To__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <columns>cdcpc__DensityActualFrom__c</columns>
    <columns>cdcpc__DensityActualTo__c</columns>
    <columns>cdcpc__DensityStandardFrom__c</columns>
    <columns>cdcpc__DensityStandardTo__c</columns>
    <columns>cdcpc__PFromPsia__c</columns>
    <columns>cdcpc__PToPsia__c</columns>
    <columns>cdcpc__TFromR__c</columns>
    <columns>cdcpc__TToR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cdcpc__UnitOfMeasureConversion__c.cdcpc__GasFlowRate</value>
    </filters>
    <label>All GasFlowRate Conversions</label>
</ListView>