force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__LiquidFlowRate.listView-meta.xml
<ListView>
    <fullName>cdcpc__LiquidFlowRate</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__LiquidFlowRate_UOM_From__c</columns>
    <columns>cdcpc__LiquidFlowRate_UOM_To__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <columns>cdcpc__DensityActualFrom__c</columns>
    <columns>cdcpc__DensityActualTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cdcpc__UnitOfMeasureConversion__c.cdcpc__LiquidFlowRate</value>
    </filters>
    <label>All LiquidFlowRate Conversions</label>
</ListView>