force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__Pressure.listView-meta.xml
<ListView>
    <fullName>cdcpc__Pressure</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__Pressure_UOM_From__c</columns>
    <columns>cdcpc__Pressure_UOM_To__c</columns>
    <columns>cdcpc__Adder__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cdcpc__UnitOfMeasureConversion__c.cdcpc__Pressure</value>
    </filters>
    <label>All Pressure Conversions</label>
</ListView>