force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__Viscosity.listView-meta.xml
<ListView>
    <fullName>cdcpc__Viscosity</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__Viscosity_UOM_From__c</columns>
    <columns>cdcpc__Viscosity_UOM_To__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cdcpc__UnitOfMeasureConversion__c.cdcpc__Viscosity</value>
    </filters>
    <label>All Viscosity Conversions</label>
</ListView>