force-app/main/default/objects/cdcpc__UnitOfMeasureConversion__c/listViews/cdcpc__Volume.listView-meta.xml
<ListView>
    <fullName>cdcpc__Volume</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cdcpc__Volume_UOM_From__c</columns>
    <columns>cdcpc__Volume_UOM_To__c</columns>
    <columns>cdcpc__Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cdcpc__UnitOfMeasureConversion__c.cdcpc__Volume</value>
    </filters>
    <label>All Volume Conversions</label>
</ListView>